Include: can now point to project outside the workspace